--- a/package.json
+++ b/package.json
@@ -1,17 +1,32 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "homepage": "https://fshautyy.github.io/myportfolio/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/engine": "^3.1.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.1.0",
+    "animate.css": "^4.1.1",
+    "nodemailer": "^6.9.8",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.6.0",
+    "react-multi-carousel": "^2.8.4",
+    "react-router-dom": "^6.21.3",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-scroll-parallax": "^3.4.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
